--- a/HospitalManager/HospitalManager.API/appsettings.Example.json
+++ b/HospitalManager/HospitalManager.API/appsettings.Example.json
@@ -1,3 +1,17 @@
 {
-
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Default": "Connection string from your DB "
+  },
+  "jwt": {
+    "key": "The super long key for generate the JWT",
+    "issuer": "adressIssuer.com",
+    "audience": "adressAudience.com"
+  }
 }
